force-app/main/default/objects/PS_Project__c/PS_Project__c.object-meta.xml
<CustomObject>
    <description>SOX object - This object is used to track the Projects which are related to Professional Services SKU.</description>
    <label>PS Project</label>
    <nameField>
        <label>PS Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>