force-app/main/default/objects/PS_Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field refers to Account related to PS Project</description>
    <inlineHelpText>This field refers to Account related to PS Project</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PS Projects</relationshipLabel>
    <relationshipName>PS_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>