force-app/main/default/objects/PS_Project__c/fields/Account_TLevel1__c.field-meta.xml
<CustomField>
    <fullName>Account_TLevel1__c</fullName>
    <formula>Opportunity__r.ETM_Theatre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account TLevel1</label>
    <type>Text</type>
</CustomField>