force-app/main/default/objects/PS_Project__c/fields/Account_TLevel2__c.field-meta.xml
<CustomField>
    <fullName>Account_TLevel2__c</fullName>
    <formula>Opportunity__r.ETM_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account TLevel2</label>
    <type>Text</type>
</CustomField>