force-app/main/default/objects/PS_Project__c/fields/Actual_Billable_hours_logged__c.field-meta.xml
<CustomField>
    <fullName>Actual_Billable_hours_logged__c</fullName>
    <label>Total Billable Hours Delivered</label>
    <summarizedField>PS_Task__c.Billable_Hours_Actual__c</summarizedField>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>