force-app/main/default/objects/PS_Project__c/fields/Asana_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Asana_Project_Id__c</fullName>
    <description>MKT26-669: This field captures the corresponding Asana project Id</description>
    <externalId>true</externalId>
    <label>Asana Project Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>