force-app/main/default/objects/PS_Project__c/fields/Billable_Consult_Hours_Approved__c.field-meta.xml
<CustomField>
    <fullName>Billable_Consult_Hours_Approved__c</fullName>
    <label>Billable Consult Hours Approved</label>
    <summarizedField>PS_Task__c.Billable_Hours_Approved__c</summarizedField>
    <summaryFilterItems>
        <field>PS_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Consult, Consult-Onsite, Consult-Remote, Accelerator</value>
    </summaryFilterItems>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>