force-app/main/default/objects/PS_Project__c/fields/Billable_Hours_Override__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggling this will allow the PS record to log more hours than actually purchased</description>
    <inlineHelpText>Toggling this will allow the PS record to log more hours than actually purchased</inlineHelpText>
    <label>Billable Hours Override</label>
    <type>Checkbox</type>
</CustomField>