force-app/main/default/objects/PS_Project__c/fields/Comments_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Comments_Last_Updated__c</fullName>
    <description>Created as part of MKT26-178 to stamp datetime when the Comments field was last updated.</description>
    <label>Comments Last Updated</label>
    <type>DateTime</type>
</CustomField>