force-app/main/default/objects/PS_Project__c/fields/Customer_Project_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Project_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Project Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PS Projects</relationshipLabel>
    <relationshipName>PS_Project2</relationshipName>
    <type>Lookup</type>
</CustomField>