force-app/main/default/objects/PS_Project__c/fields/Delivery_Manager__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of MKT26-1125 to refer to the Delivery Manager assigned to Project.</description>
    <inlineHelpText>This field refers to the Delivery Manager assigned to the project.</inlineHelpText>
    <label>Delivery Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>