force-app/main/default/objects/PS_Project__c/fields/Has_Admin_Project__c.field-meta.xml
<CustomField>
    <fullName>Has_Admin_Project__c</fullName>
    <formula>Account__r.Name = &apos;Rubrik&apos; &amp;&amp;  RecordType.DeveloperName = &apos;Internal&apos; &amp;&amp;  Name  = &apos;ADMIN&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Admin Project</label>
    <type>Checkbox</type>
</CustomField>