force-app/main/default/objects/PS_Project__c/fields/High_Visibility_Project__c.field-meta.xml
<CustomField>
    <fullName>High_Visibility_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <description>manually checked field by the PS team to determine if a project is high visibility</description>
    <label>(Deprecate) High Visibility Project</label>
    <type>Checkbox</type>
</CustomField>