force-app/main/default/objects/PS_Project__c/fields/Implementation_Summary_Added__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Summary_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation Summary Added</label>
    <type>Checkbox</type>
</CustomField>