force-app/main/default/objects/PS_Project__c/fields/Install_Hours_Billed__c.field-meta.xml
<CustomField>
    <fullName>Install_Hours_Billed__c</fullName>
    <label>Install Hours Delivered</label>
    <summarizedField>PS_Task__c.Billable_Hours_Actual__c</summarizedField>
    <summaryFilterItems>
        <field>PS_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Install</value>
    </summaryFilterItems>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>