force-app/main/default/objects/PS_Project__c/fields/Last_Sync_Date_Time_Asana__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date_Time_Asana__c</fullName>
    <description>Created as part of Asana Integration Project</description>
    <label>Last Sync Date Time Asana</label>
    <type>DateTime</type>
</CustomField>