force-app/main/default/objects/PS_Project__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Email</type>
</CustomField>