force-app/main/default/objects/PS_Project__c/fields/Non_Billable_Consult_Hours_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Non_Billable_Consult_Hours_Rejected__c</fullName>
    <label>Non Billable Consult Hours Rejected</label>
    <summarizedField>PS_Task__c.Non_Billable_Hours_Rejected__c</summarizedField>
    <summaryFilterItems>
        <field>PS_Task__c.Task_Type__c</field>
        <operation>equals</operation>
        <value>Consult - Non Billable</value>
    </summaryFilterItems>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>