force-app/main/default/objects/PS_Project__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>CS21-3262</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>