force-app/main/default/objects/PS_Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PS Projects</relationshipLabel>
    <relationshipName>PS_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>