force-app/main/default/objects/PS_Project__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This refers to Order related to the PS Project</description>
    <inlineHelpText>This refers to Order related to the PS Project</inlineHelpText>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>PS Projects</relationshipLabel>
    <relationshipName>PS_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>