force-app/main/default/objects/PS_Project__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <label>PO Number</label>
    <type>TextArea</type>
</CustomField>