force-app/main/default/objects/PS_Project__c/fields/Progress_Category__c.field-meta.xml
<CustomField>
    <fullName>Progress_Category__c</fullName>
    <description>MKT26-554: Field to track the Progress on PS Project</description>
    <label>Activity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress with PS</fullName>
            </value>
            <value>
                <fullName>Waiting on Sales</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Waiting on Support</fullName>
            </value>
            <value>
                <fullName>Waiting on Engineering</fullName>
            </value>
            <value>
                <fullName>Ready to Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>