force-app/main/default/objects/PS_Project__c/fields/Project_Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Expected_End_Date__c</fullName>
    <description>Project Expected End Date for project</description>
    <inlineHelpText>Enter Project Expected End Date</inlineHelpText>
    <label>(Deprecate) Project Expected End Date</label>
    <type>Date</type>
</CustomField>