force-app/main/default/objects/PS_Project__c/fields/Project_Expected_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Expected_Start_Date__c</fullName>
    <inlineHelpText>Enter Project Expected Start Date</inlineHelpText>
    <label>Project Expected Start Date</label>
    <type>Date</type>
</CustomField>