force-app/main/default/objects/PS_Project__c/fields/Project_Hourly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Hourly_Bill_Rate__c</fullName>
    <description>Project hourly bill rate</description>
    <inlineHelpText>Please enter Project hourly bill rate for this project</inlineHelpText>
    <label>Project Hourly Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>