force-app/main/default/objects/PS_Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This refers to User who is managing the Project</description>
    <inlineHelpText>This refers to User who is managing the Project</inlineHelpText>
    <label>Project Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>