force-app/main/default/objects/PS_Project__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <description>PS Project&apos;s current status</description>
    <inlineHelpText>PS Project&apos;s current status</inlineHelpText>
    <label>Project Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PS_Status</valueSetName>
    </valueSet>
</CustomField>