force-app/main/default/objects/PS_Project__c/fields/PS_Scope__c.field-meta.xml
<CustomField>
    <fullName>PS_Scope__c</fullName>
    <description>CS21-3262</description>
    <label>Workloads in scope for PS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>