force-app/main/default/objects/PS_Project__c/fields/Support_Case_Info__c.field-meta.xml
<CustomField>
    <fullName>Support_Case_Info__c</fullName>
    <description>Created for MKT26-817 so that any PSO team member can add relevant support case/jira information</description>
    <label>Support Case Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>