force-app/main/default/objects/PS_Project__c/fields/Temperature_Gauge__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Gauge__c</fullName>
    <description>Temperature of the project</description>
    <label>Temperature Gauge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>