force-app/main/default/objects/PS_Project__c/fields/Temperature_Gauge_Flag__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Gauge_Flag__c</fullName>
    <formula>IMAGE(
CASE( Temperature_Gauge__c ,
&quot;Green&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Yellow&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;&quot;, 30, 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Temperature Gauge Flag</label>
    <type>Text</type>
</CustomField>