force-app/main/default/objects/PS_Project__c/fields/Total_Billable_Hours_Approved__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours_Approved__c</fullName>
    <description>hour billed and approved</description>
    <inlineHelpText>hour billed and approved</inlineHelpText>
    <label>Total Billable Hours Approved</label>
    <summarizedField>PS_Task__c.Billable_Hours_Approved__c</summarizedField>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>