force-app/main/default/objects/PS_Project__c/fields/Total_Billable_Hours_Expected__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours_Expected__c</fullName>
    <label>Total Billable Hours Purchased</label>
    <summarizedField>PS_Task__c.Billable_Hours_Expected__c</summarizedField>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>