force-app/main/default/objects/PS_Project__c/fields/Total_Billable_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Total_Billable_Hours_Remaining__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Hours Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>