force-app/main/default/objects/PS_Project__c/fields/Total_Non_Billable_Hours_Actual__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Hours_Actual__c</fullName>
    <label>Total Non-Billable Hours Actual</label>
    <summarizedField>PS_Task__c.Non_Billable_hours_actual__c</summarizedField>
    <summaryForeignKey>PS_Task__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>