force-app/main/default/objects/PS_Project__c/fields/Total_Non_Billable_Hours_Expected__c.field-meta.xml
<CustomField>
    <fullName>Total_Non_Billable_Hours_Expected__c</fullName>
    <description>Total non-billable hours expected for this project</description>
    <inlineHelpText>Please enter Total non-billable hours expected for this project</inlineHelpText>
    <label>Total Non-Billable Hours Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>