force-app/main/default/objects/PS_Project__c/fields/Welcome_Letter_Contact__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Letter_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Welcome Letter Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>PS Projects (Welcome Letter Contact)</relationshipLabel>
    <relationshipName>PS_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>