force-app/main/default/objects/PS_Project__c/fields/Work_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Work_at_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether a project is an &quot;at risk&quot; project or not. Requested by the PS team on 5/11/20</description>
    <inlineHelpText>Denotes whether a project is an &quot;at risk&quot; project or not.</inlineHelpText>
    <label>(Deprecate) Work at Risk</label>
    <type>Checkbox</type>
</CustomField>