force-app/main/default/objects/PS_Project__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>For Customer related task tracking only</description>
    <label>External</label>
</RecordType>