force-app/main/default/objects/PS_Project__c/recordTypes/Internal.recordType-meta.xml
<RecordType>
    <fullName>Internal</fullName>
    <active>true</active>
    <description>For Internal task tracking only</description>
    <label>Internal</label>
</RecordType>