force-app/main/default/objects/PS_Project__c/validationRules/PSProject_RestrictOverTime.validationRule-meta.xml
<ValidationRule>
    <fullName>PSProject_RestrictOverTime</fullName>
    <active>false</active>
    <errorConditionFormula>Total_Billable_Hours_Expected__c &lt;  Actual_Billable_hours_logged__c &amp;&amp;  Billable_Hours_Override__c =FALSE &amp;&amp;  PRIORVALUE(Billable_Hours_Override__c) == Billable_Hours_Override__c</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>You cannot log time more than expected hours on Project. Please contact your Project Manager to override.</errorMessage>
</ValidationRule>