force-app/main/default/objects/PS_Project__c/listViews/New_All_PS_Projects.listView-meta.xml
<ListView>
    <fullName>New_All_PS_Projects</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>New All PS Projects</label>
</ListView>